<resources>
    <string name="app_name">StudyMaterial3</string>
    <string name="place_holder">PlaceHolder</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_authentication">Phone Authentication</string>
    <string name="sign_in_with_google">Sign-in with Google</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="loading">Loading...</string>
    <string name="upsc_n_nnext_exam_date">UPSC\n\nNext exam date</string>
    <string name="nextButton">TextView</string>
    <string name="type">TYPE</string>
    <string name="semester">SEMESTER</string>
    <string name="enter_subject">Enter subject</string>
    <string name="subject">SUBJECT</string>
    <string name="year">YEAR</string>
    <string name="made_by_company_name">Made by company name</string>
    <string name="app_name_real">APP NAME</string>
    <string name="guest">Guest</string>
    <string name="welcome_students">WELCOME STUDENTS</string>
    <string name="or">or</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">VERIFY</string>
    <string name="didn_t_recieve_otp">Didn\'t recieve OTP ?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="logout">LogOut</string>
    <string name="settheme">SetTheme</string>
    <string name="theme">Theme</string>
    <string name="save">SAVE</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="contactus">ContactUs</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="agriculture">AGRICULTURE</string>
    <string name="animal_husbandry">ANIMAL HUSBANDRY</string>
    <string name="anthropology">ANTHROPOLOGY</string>
    <string name="exam_vichar">EXAM VICHAR</string>
    <string name="examing">𝐸𝓍𝒶𝓂 𝒱𝒾𝒸𝒽𝒶𝓇</string>
    <string-array name="subjects">
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Maths</item>
    </string-array>
</resources>