<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/layout_or_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="?android:backgroundSplit"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:onClick="moveToHome"
            android:text="@string/guest"
            android:textColor="?android:backgroundSplit"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/app_name"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_students"
        android:textAlignment="center"
        android:textColor="?android:backgroundSplit"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/google_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/round_first"
        android:backgroundTint="?android:backgroundSplit"
        android:text="@string/google_sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/round_first"
        android:backgroundTint="?android:backgroundSplit"
        android:onClick="moveToPhoneAuthentication"
        android:text="Sign in with Phone"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="@+id/google_btn"
        app:layout_constraintStart_toStartOf="@+id/google_btn"
        app:layout_constraintTop_toBottomOf="@+id/google_btn" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/google_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circle"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="82dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toTopOf="@+id/app_name"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="50dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/google_btn"
        app:layout_constraintStart_toStartOf="@+id/google_btn"
        app:layout_constraintTop_toTopOf="@+id/google_btn"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_or_guest"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@drawable/icon_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>