<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".VerificationActivity">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="21dp"
        android:text="@string/enter_otp"
        android:textColor="?android:backgroundSplit"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="306dp"
        android:layout_height="255dp"
        android:layout_marginTop="4dp"
        android:rotation="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mobile_apps" />

    <LinearLayout
        android:id="@+id/root_otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <EditText
            android:id="@+id/otp_edit_box1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/otp_boxes"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength="1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/otp_edit_box2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:autofillHints="password"
            android:background="@drawable/otp_boxes"
            android:textColor="@color/black"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/otp_edit_box3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:autofillHints="password"
            android:background="@drawable/otp_boxes"
            android:textColor="@color/black"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/otp_edit_box4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:autofillHints="password"
            android:background="@drawable/otp_boxes"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength="1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/otp_edit_box5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:autofillHints="password"
            android:background="@drawable/otp_boxes"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength="1"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/otp_edit_box6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:autofillHints="password"
            android:background="@drawable/otp_boxes"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength="1"
            android:textSize="30sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_to_branch"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:elevation="8dp"
        android:onClick="moveToHome"
        android:shadowColor="#D70C0C0C"
        android:text="@string/verify"
        android:translationX="2dp"
        android:translationZ="2dp"
        app:backgroundTint="?android:backgroundSplit"
        app:cornerRadius="24dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/didn_t_recieve_otp"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/root_otp_layout" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/resend_otp"
        android:textColor="?android:backgroundSplit"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/root_otp_layout" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="You have only 18 seconds\n to click on Resend OTP"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="?android:backgroundSplit"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="NOTE : If on clicking Resend OTP in the given time \n interval You didn't receive new OTP then try the \n older one once again it might work !"
        android:textColor="#FF0606"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />


</androidx.constraintlayout.widget.ConstraintLayout>